--- a/TFE/Base.lproj/Main.storyboard
+++ b/TFE/Base.lproj/Main.storyboard
@@ -134,12 +134,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Search Term (i.e. food)" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="c60-n4-dyY">
-                                <rect key="frame" x="140" y="239" width="320" height="30"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                            </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Location Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dJ2-js-3fG">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Location Name" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="dJ2-js-3fG">
                                 <rect key="frame" x="140" y="168" width="320" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="Taw-fE-GcC"/>
@@ -159,67 +154,18 @@
                                     </mask>
                                 </variation>
                             </pickerView>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Number of results (max 20)" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Nnv-6Q-huV">
-                                <rect key="frame" x="140" y="100" width="320" height="30"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="528" id="ZRJ-nK-AG2"/>
-                                    <constraint firstAttribute="width" constant="528" id="bNS-KO-VHj"/>
-                                    <constraint firstAttribute="height" constant="30" id="j2D-DA-Nll"/>
-                                    <constraint firstAttribute="height" constant="30" id="oM0-Gs-wZR"/>
-                                    <constraint firstAttribute="height" constant="30" id="tzq-aE-plV"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="ZRJ-nK-AG2"/>
-                                        <exclude reference="bNS-KO-VHj"/>
-                                        <exclude reference="j2D-DA-Nll"/>
-                                        <exclude reference="oM0-Gs-wZR"/>
-                                        <exclude reference="tzq-aE-plV"/>
-                                    </mask>
-                                </variation>
-                            </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="Nnv-6Q-huV" firstAttribute="leading" secondItem="fkk-Fa-Iz2" secondAttribute="leadingMargin" constant="20" id="7L7-gP-vaa"/>
-                            <constraint firstItem="dJ2-js-3fG" firstAttribute="top" secondItem="Nnv-6Q-huV" secondAttribute="bottom" constant="30" id="AlA-0F-48A"/>
-                            <constraint firstItem="c60-n4-dyY" firstAttribute="leading" secondItem="dJ2-js-3fG" secondAttribute="leading" id="Cgq-TN-RuJ"/>
-                            <constraint firstAttribute="centerY" secondItem="Nnv-6Q-huV" secondAttribute="centerY" constant="185" id="ECr-lR-692"/>
                             <constraint firstAttribute="centerY" secondItem="jG1-MV-pEm" secondAttribute="centerY" constant="-58" id="GLv-Hk-SBt"/>
-                            <constraint firstItem="Nnv-6Q-huV" firstAttribute="leading" secondItem="fkk-Fa-Iz2" secondAttribute="leadingMargin" constant="20" id="GWm-xd-dZm"/>
-                            <constraint firstItem="jG1-MV-pEm" firstAttribute="leading" secondItem="c60-n4-dyY" secondAttribute="leading" id="KRW-rs-iS5"/>
-                            <constraint firstItem="Nnv-6Q-huV" firstAttribute="leading" secondItem="fkk-Fa-Iz2" secondAttribute="leadingMargin" constant="20" id="LC7-TL-Xd2"/>
                             <constraint firstAttribute="trailingMargin" secondItem="dJ2-js-3fG" secondAttribute="trailing" constant="20" id="LQx-SQ-yRz"/>
                             <constraint firstAttribute="centerY" secondItem="dJ2-js-3fG" secondAttribute="centerY" constant="117" id="NI7-Fr-8zy"/>
                             <constraint firstAttribute="centerX" secondItem="dJ2-js-3fG" secondAttribute="centerX" id="QpK-BY-OMj"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="Nnv-6Q-huV" secondAttribute="trailing" constant="20" id="RWC-Ac-Mes"/>
                             <constraint firstAttribute="centerX" secondItem="jG1-MV-pEm" secondAttribute="centerX" id="WXV-wp-4dc"/>
-                            <constraint firstItem="Nnv-6Q-huV" firstAttribute="trailing" secondItem="dJ2-js-3fG" secondAttribute="trailing" id="Xkm-Ee-KAc"/>
-                            <constraint firstItem="Nnv-6Q-huV" firstAttribute="leading" secondItem="dJ2-js-3fG" secondAttribute="leading" id="Y7i-lc-qoG"/>
-                            <constraint firstItem="dJ2-js-3fG" firstAttribute="top" secondItem="Nnv-6Q-huV" secondAttribute="bottom" constant="38" id="as8-hH-MPn"/>
                             <constraint firstItem="dJ2-js-3fG" firstAttribute="leading" secondItem="fkk-Fa-Iz2" secondAttribute="leadingMargin" constant="20" id="hJa-Zt-FQD"/>
-                            <constraint firstItem="jG1-MV-pEm" firstAttribute="trailing" secondItem="c60-n4-dyY" secondAttribute="trailing" id="m9F-yJ-Gxm"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="Nnv-6Q-huV" secondAttribute="trailing" constant="20" id="mBh-TR-n8t"/>
-                            <constraint firstItem="Nnv-6Q-huV" firstAttribute="top" secondItem="1f1-tr-j2z" secondAttribute="bottom" constant="180" id="oj6-Qb-eyr"/>
-                            <constraint firstAttribute="centerX" secondItem="Nnv-6Q-huV" secondAttribute="centerX" id="p5j-fL-a1U"/>
-                            <constraint firstItem="c60-n4-dyY" firstAttribute="trailing" secondItem="dJ2-js-3fG" secondAttribute="trailing" id="qGF-nm-EUD"/>
-                            <constraint firstAttribute="centerX" secondItem="Nnv-6Q-huV" secondAttribute="centerX" id="tTH-xo-wgp"/>
-                            <constraint firstAttribute="trailingMargin" secondItem="Nnv-6Q-huV" secondAttribute="trailing" constant="20" id="vsP-b5-bju"/>
-                            <constraint firstItem="c60-n4-dyY" firstAttribute="top" secondItem="dJ2-js-3fG" secondAttribute="bottom" constant="41" id="wBp-P8-hab"/>
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
-                                <exclude reference="7L7-gP-vaa"/>
-                                <exclude reference="GWm-xd-dZm"/>
-                                <exclude reference="LC7-TL-Xd2"/>
-                                <exclude reference="RWC-Ac-Mes"/>
-                                <exclude reference="mBh-TR-n8t"/>
-                                <exclude reference="oj6-Qb-eyr"/>
-                                <exclude reference="p5j-fL-a1U"/>
-                                <exclude reference="vsP-b5-bju"/>
-                                <exclude reference="AlA-0F-48A"/>
                                 <exclude reference="LQx-SQ-yRz"/>
                                 <exclude reference="hJa-Zt-FQD"/>
                             </mask>
@@ -234,9 +180,7 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="itemField" destination="c60-n4-dyY" id="FRn-2V-vTr"/>
                         <outlet property="locationField" destination="dJ2-js-3fG" id="kjL-zX-sl3"/>
-                        <outlet property="numberField" destination="Nnv-6Q-huV" id="HUx-Cn-uga"/>
                         <outlet property="yelpOptionPicker" destination="jG1-MV-pEm" id="0OP-xM-qZM"/>
                     </connections>
                 </viewController>
@@ -304,12 +248,12 @@
         <scene sceneID="46v-Xq-Kwb">
             <objects>
                 <tableViewController storyboardIdentifier="TableView" id="wuR-fK-ud5" userLabel="Friend Table" customClass="GroupTableViewController" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="1" sectionFooterHeight="1" id="k9n-Z6-nbA">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="117" sectionHeaderHeight="1" sectionFooterHeight="1" id="k9n-Z6-nbA">
                         <rect key="frame" x="0.0" y="64" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="aOM-Bl-9md" customClass="TDBadgedCell">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="117" id="aOM-Bl-9md" customClass="TDBadgedCell">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="aOM-Bl-9md" id="LUq-ek-peA">
                                     <autoresizingMask key="autoresizingMask"/>
