--- a/TFE/Base.lproj/Main.storyboard
+++ b/TFE/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6250" systemVersion="14A389" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="10w-ke-JC6">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6206.8" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="10w-ke-JC6">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6244"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <deployment defaultVersion="1792" identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7026.1"/>
+        <capability name="Constraints with attributes relative to the layout margin" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Swiping-->
@@ -248,6 +249,11 @@
                                 <exclude reference="VdP-dh-Ki3"/>
                                 <exclude reference="XOQ-b9-jaS"/>
                                 <exclude reference="uD3-JK-CJQ"/>
+                                <exclude reference="3ok-pv-yM4"/>
+                                <exclude reference="9eo-RS-jAS"/>
+                                <exclude reference="MVS-7b-fOD"/>
+                                <exclude reference="eZL-0x-59R"/>
+                                <exclude reference="w4s-fa-2xv"/>
                                 <exclude reference="3Jn-M4-oXF"/>
                                 <exclude reference="44b-tn-lhE"/>
                                 <exclude reference="57V-fF-Oxj"/>
@@ -271,11 +277,6 @@
                                 <exclude reference="wnI-vR-vTm"/>
                                 <exclude reference="xyW-0V-WPF"/>
                                 <exclude reference="zld-JD-AGB"/>
-                                <exclude reference="3ok-pv-yM4"/>
-                                <exclude reference="9eo-RS-jAS"/>
-                                <exclude reference="MVS-7b-fOD"/>
-                                <exclude reference="eZL-0x-59R"/>
-                                <exclude reference="w4s-fa-2xv"/>
                                 <exclude reference="31b-pj-T3B"/>
                                 <exclude reference="8i5-1P-T73"/>
                                 <exclude reference="DTi-EX-Mf1"/>
@@ -464,12 +465,12 @@
         <scene sceneID="46v-Xq-Kwb">
             <objects>
                 <tableViewController storyboardIdentifier="TableView" id="wuR-fK-ud5" userLabel="Friend Table" customClass="GroupTableViewController" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="1" sectionFooterHeight="1" id="k9n-Z6-nbA">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="126" sectionHeaderHeight="1" sectionFooterHeight="1" id="k9n-Z6-nbA">
                         <rect key="frame" x="0.0" y="64" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" id="aOM-Bl-9md" customClass="TDBadgedCell">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" rowHeight="126" id="aOM-Bl-9md" customClass="TDBadgedCell">
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="aOM-Bl-9md" id="LUq-ek-peA">
                                     <autoresizingMask key="autoresizingMask"/>
